fixed hero spacing

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -85,7 +85,7 @@
 .right {
   display: flex;
   flex-direction: column;
-  justify-self: left;
+  justify-content: space-between;
 }
 .hero-content {
   padding-left: 2rem;
